Change file name to enable post install script

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: tmuxpackage
 Section: utils
 Priority: optional
 Maintainer: user <aaa@bbb.ccc>
-Build-Depends: debhelper-compat (= 12), autotools-dev
-Standards-Version: 0.0.1
+Build-Depends: bison, debhelper-compat (= 12), dpkg-dev (>= 1.16.1~), libevent-dev (>> 2.0.10), libncurses5-dev, pkg-config
+Standards-Version: 0.0.4
 Homepage: https://github.com/test-project123/tmux
 #Vcs-Browser: https://salsa.debian.org/debian/tmuxpackage
 #Vcs-Git: https://salsa.debian.org/debian/tmuxpackage.git
